Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  example-com
  labels:
    app: example-com
