Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-com-app
  namespace: example-com
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-com-pod
  template:
    metadata:
      labels:
        app: example-com-pod
    spec:
      containers:
        - name: example-com-pod
          image: example/example-com:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: '32Mi'
              cpu: '2.5m'
            limits:
              memory: '64Mi'
              cpu: '5m'
