Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-com-svc
  namespace: example-com
spec:
  type: NodePort
  selector:
    app: example-com-pod
  ports:
    - port: 33333
      targetPort: 3000
      protocol: TCP
